--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -23,3 +23,12 @@ services:
         ports:
             - 127.0.0.1:14268:14268
             - 127.0.0.1:16686:16686
+
+    oc-collector:
+        ports:
+            - 127.0.0.1:55680:55679
+
+    oc-agent:
+        ports:
+            - 127.0.0.1:55678:55678
+            - 127.0.0.1:55679:55679
