--- a/config.toml.dist
+++ b/config.toml.dist
@@ -13,6 +13,7 @@ addr = ":10000"
 enabled = false
 
 [opencensus.agent]
+enabled = false
 address = "127.0.0.1:55678"
 insecure = false
 reconnectPeriod = "5s"
