--- a/config.toml.dist
+++ b/config.toml.dist
@@ -12,7 +12,7 @@ addr = ":10000"
 [instrumentation.prometheus]
 enabled = false
 
-[opencensus.agent]
+[opencensus.exporter]
 enabled = false
 address = "127.0.0.1:55678"
 insecure = false
