--- a/config.toml.dist
+++ b/config.toml.dist
@@ -32,7 +32,7 @@ port = 3306
 user = "root"
 pass = ""
 name = "app"
-params = { charset = "utf8mb4" }
+params = { collation = "utf8mb4_general_ci" }
 
 [redis]
 host = "127.0.0.1"
