Update values local

--- a/.banzaicloud/charts/spotguide-modern-go-application/values.local.yaml
+++ b/.banzaicloud/charts/spotguide-modern-go-application/values.local.yaml
@@ -6,7 +6,7 @@ application:
     tag: latest
     pullPolicy: Always
   config:
-    instrumentation:
+    opencensus:
       prometheus:
         enabled: true
 
