--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,39 +7,30 @@ on:
   pull_request:
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
+    env:
+      VERBOSE: 1
+      GOFLAGS: -mod=readonly
+
     steps:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
-        id: go
 
       - name: Checkout code
         uses: actions/checkout@v1
 
-      - name: Download dependencies
-        run: go mod download
-        env:
-          GOPROXY: https://proxy.golang.org
-
       - name: Build
         run: make build
-        env:
-          VERBOSE: 1
 
       - name: Unit tests
         run: make test
-        env:
-          VERBOSE: 1
 
       - name: Integration tests
         run: make test-integration
-        env:
-          VERBOSE: 1
 
       - name: Lint
         run: make lint
@@ -52,7 +43,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build image
-        run: docker build --build-arg GOPROXY=https://proxy.golang.org -t docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}:${GITHUB_SHA:0:7} .
+        run: docker build -t docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}:${GITHUB_SHA:0:7} .
 
 #      - name: Tag image
 #        run: docker tag docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}:${GITHUB_SHA:0:7} docker.pkg.github.com/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}:${GITHUB_REF#"refs/heads/"}
