Use app as a database username when installing mysql

--- a/.banzaicloud/charts/spotguide-modern-go-application/templates/mysql-secret.yaml
+++ b/.banzaicloud/charts/spotguide-modern-go-application/templates/mysql-secret.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.mysql.existingUserSecret -}}
+{{- if not .Values.mysql.existingSecret -}}
 apiVersion: v1
 kind: Secret
 metadata:
