--- a/.banzaicloud/charts/spotguide-modern-go-application/templates/hpa.yaml
+++ b/.banzaicloud/charts/spotguide-modern-go-application/templates/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.application.autoscaling.enabled }}
+{{- if .Values.autoscaling.enabled }}
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -16,15 +16,15 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ include "spotguide-modern-go-application.fullname" . }}
-  minReplicas: {{ .Values.application.autoscaling.minReplicas }}
-  maxReplicas: {{ .Values.application.autoscaling.maxReplicas }}
+  minReplicas: {{ .Values.autoscaling.minReplicas }}
+  maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: {{ .Values.application.autoscaling.targetCPUUtilizationPercentage }}
+        targetAverageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
     - type: Resource
       resource:
         name: memory
-        targetAverageUtilization: {{ .Values.application.autoscaling.targetMemoryUtilizationPercentage }}
+        targetAverageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
 {{- end }}
