--- a/prototool.yaml
+++ b/prototool.yaml
@@ -22,6 +22,13 @@ generate:
             flags: plugins=grpc
             output: ./.gen
 
+        -
+            name: kit
+            type: go
+            path: bin/protoc-gen-kit
+            #flags: plugins=grpc
+            output: ./.gen
+
 lint:
     group: uber2
     rules:
