--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,6 @@
-APP_DEBUG=true
-APP_SHUTDOWNTIMEOUT=0s
-APP_LOG_FORMAT=logfmt
-APP_LOG_LEVEL=debug
-APP_TELEMETRY_ADDR=127.0.0.1:10000
-APP_APP_HTTPADDR=127.0.0.1:8000
-APP_APP_GRPCADDR=127.0.0.1:8001
+SHUTDOWNTIMEOUT=0s
+LOG_FORMAT=logfmt
+LOG_LEVEL=debug
+TELEMETRY_ADDR=127.0.0.1:10000
+APP_HTTPADDR=127.0.0.1:8000
+APP_GRPCADDR=127.0.0.1:8001
