Improve todo service and API

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -12,5 +12,5 @@ model:
 struct_tag: json
 
 models:
-    Todo:
-        model: github.com/sagikazarmark/modern-go-application/internal/app/mga/todo.Todo
+    TodoItem:
+        model: github.com/sagikazarmark/modern-go-application/internal/app/mga/todo.Item
